--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.2",
     "mongodb": "^2.2.31",
     "node-quickbooks": "^2.0.18",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "pug": "^2.0.0-rc.4"
   }
 }
