--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/Tardishade/HomigoChallenge#readme",
   "dependencies": {
+    "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
+    "csrf": "^3.0.6",
+    "ejs": "0.7.2",
     "express": "^4.16.2",
+    "express-session": "^1.11.3",
     "mongodb": "^2.2.31",
     "node-quickbooks": "^2.0.18",
     "nodemon": "^1.12.1",
