--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Tardishade/HomigoChallenge#readme",
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "csrf": "^3.0.6",
